16226
This is in 2.9, so not recent.
```
private[scala] trait SpecializableCompanion
private[scala] trait AnyValCompanion extends SpecializableCompanion { }

scala> List(Byte, Char, Short)
res0: List[AnyValCompanion with ScalaObject] = List(object scala.Byte, object scala.Char, object scala.Short)

scala> var x: List[AnyValCompanion with ScalaObject] = res0
<console>:8: error: trait AnyValCompanion cannot be accessed in package scala
       var x: List[AnyValCompanion with ScalaObject] = res0
                   ^
```
